syntax = "proto3";

package ai.metathings.service.deviced;
option go_package = "deviced";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "model.proto";

message GetObjectRequest {
	OpObject object = 1 [(validator.field) = {msg_exists: true}];
}

message GetObjectResponse {
	Object object = 1;
}
